// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JIRA wiki markup - headings should convert string with heading in it 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "indentLevel": null,
      },
      "content": Array [
        Object {
          "text": "This is a string.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "attrs": Object {
        "indentLevel": null,
        "level": "1",
      },
      "content": Array [
        Object {
          "text": "Boom! this is a heading with ",
          "type": "text",
        },
        Object {
          "marks": Array [
            Object {
              "type": "strong",
            },
          ],
          "text": "bold",
          "type": "text",
        },
        Object {
          "text": " text in it",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    Object {
      "attrs": Object {
        "indentLevel": null,
      },
      "content": Array [
        Object {
          "text": "      ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - headings should set specific style for heading level 1 inside macro 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "panelType": "info",
      },
      "content": Array [
        Object {
          "attrs": Object {
            "indentLevel": null,
          },
          "content": Array [
            Object {
              "marks": Array [
                Object {
                  "type": "strong",
                },
              ],
              "text": "HEADING",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "panel",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - headings should set specific style for heading level 2 inside macro 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "panelType": "info",
      },
      "content": Array [
        Object {
          "attrs": Object {
            "indentLevel": null,
          },
          "content": Array [
            Object {
              "marks": Array [
                Object {
                  "type": "em",
                },
                Object {
                  "type": "strong",
                },
              ],
              "text": "heading",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "panel",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - headings should set specific style for heading level 3 inside macro 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "panelType": "info",
      },
      "content": Array [
        Object {
          "attrs": Object {
            "indentLevel": null,
          },
          "content": Array [
            Object {
              "marks": Array [
                Object {
                  "type": "strong",
                },
              ],
              "text": "heading",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "panel",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - headings should set specific style for heading level 4 inside macro 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "panelType": "info",
      },
      "content": Array [
        Object {
          "attrs": Object {
            "indentLevel": null,
          },
          "content": Array [
            Object {
              "marks": Array [
                Object {
                  "type": "strong",
                },
                Object {
                  "attrs": Object {
                    "color": "#97A0AF",
                  },
                  "type": "textColor",
                },
              ],
              "text": "heading",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "panel",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - headings should set specific style for heading level 5 inside macro 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "panelType": "info",
      },
      "content": Array [
        Object {
          "attrs": Object {
            "indentLevel": null,
          },
          "content": Array [
            Object {
              "marks": Array [
                Object {
                  "type": "em",
                },
                Object {
                  "attrs": Object {
                    "color": "#97A0AF",
                  },
                  "type": "textColor",
                },
              ],
              "text": "heading",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "panel",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - headings should set specific style for heading level 6 inside macro 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "panelType": "info",
      },
      "content": Array [
        Object {
          "attrs": Object {
            "indentLevel": null,
          },
          "content": Array [
            Object {
              "marks": Array [
                Object {
                  "attrs": Object {
                    "color": "#97A0AF",
                  },
                  "type": "textColor",
                },
              ],
              "text": "heading",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "panel",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - headings should treat h7 as usual text inside macro 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "panelType": "info",
      },
      "content": Array [
        Object {
          "attrs": Object {
            "indentLevel": null,
          },
          "content": Array [
            Object {
              "text": "h7. heading",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "panel",
    },
  ],
  "type": "doc",
}
`;
